# OMRChecker

./: .dockerignore  .gitignore  BATCH_GENERATOR_README.md  CLAUDE.md  CRITICAL_FIXES_SUMMARY.md  DEPLOYMENT.md  Dockerfile  FRONTEND_COMPLETION_SUMMARY.md  IMPLEMENTATION_PLAN.md  NEW_IMPLEMENTATION_PLAN.md  PODMAN使用說明.md  PODMAN快速參考.md  QUICKSTART_FRONTEND.md  README.md  STUDENT_DATA_GUIDE.md  batch_generate_sheets.py  debug_template.py  deploy_gh_pages.sh  docker-compose.yml  example.json  index.html  pyproject.toml  requirements.txt  run-podman.sh  run_frontend.py  sample_student_ids.csv  test_full_workflow.py  test_markers_fixed.py  test_markers_fixed_scale.py  test_omr_processing.py  test_view_template.py  test_with_filled_answers.py  test_without_markers.py  visualize_template.py  快速開始.md  批次產生答案卡使用說明.md  環境設定說明.md
.claude/agents/: web-query-agent.md
assets/css/: style.css
assets/js/: app.js  export.js  image-processor.js  opencv-loader.js  storage.js
docs/: USER_GUIDE.md
fonts/: README.md
frontend/: README.md  app.py  test_generator.py
frontend/config/: constants.py
frontend/core/: processor.py  sheet_generator.py  template_builder.py
frontend/tests/: __init__.py  test_core.py  test_utils.py
frontend/ui/: interface.py
frontend/utils/: __init__.py  coordinate_utils.py  marker_utils.py  text_utils.py
serverless_web/: README.md  STAGE3_TESTING_GUIDE.md  STAGE4_COMPLETION_SUMMARY.md  STAGE4_TESTING_GUIDE.md  STAGE5_COMPLETION_SUMMARY.md  STAGE6_COMPLETION_SUMMARY.md  TECHNICAL_DOCUMENTATION.md  TEST_GUIDE.md  index.html
serverless_web/samples/: README.md
serverless_web/templates/: default-template.json
serverless_web/tests/: TESTING_NOTES.md  test-answer-detection.html  test-contour-detection.html  test-critical-fixes.html  test-export.html  test-storage.html  test-worker.html
serverless_web/tools/: generate-test-sheet.html
serverless_web/workers/: image-worker.js
src/: constants.py  core.py  entry.py  template.py
src/processors/: CropOnMarkers.py
src/schemas/: template_schema.py
src/utils/: interaction.py
templates/: default-template.json
test_batch_output/templates/: S001_template.json  S002_template.json  S003_template.json  S004_template.json  (+1 more)
(+12 files in other folders)
