[project]
name = "omrchecker"
version = "5.0.0"
description = "OMR Checker with Gradio Web Interface - Grade multiple choice exams fast and accurately using computer vision"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0" }
authors = [
    { name = "Udayraj Deshmukh", email = "deshmukh.udayraj@gmail.com" }
]
keywords = ["OMR", "exam", "grading", "computer-vision", "opencv", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education :: Testing",
]

dependencies = [
    "deepmerge>=1.1.0",
    "dotmap>=1.3.30",
    "gradio>=5.0.0",
    "jsonschema>=4.17.3",
    "matplotlib>=3.7.1",
    "numpy>=1.25.0",
    "opencv-contrib-python>=4.7.0.72",
    "openpyxl>=3.1.0",
    "pandas>=2.0.2",
    "Pillow>=10.0.0",
    "qrcode>=7.4.2",
    "rich>=13.4.2",
    "screeninfo>=0.8.1",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
    "pytest>=7.3.0",
]

[project.scripts]
omrchecker = "main:entry_point"

[project.urls]
Homepage = "https://github.com/Udayraj123/OMRChecker"
Documentation = "https://github.com/Udayraj123/OMRChecker/wiki"
Repository = "https://github.com/Udayraj123/OMRChecker.git"
Issues = "https://github.com/Udayraj123/OMRChecker/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
    "pytest>=7.3.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.venv
    | venv
    | _build
    | build
    | dist
  )/
)
'''
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
